--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "license": "ISC",
     "dependencies": {
         "connect-history-api-fallback": "^2.0.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "helmet": "^6.0.1",
