--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@tailwindcss/forms": "^0.4.0",
         "@tailwindcss/typography": "^0.5.2",
         "@vitejs/plugin-vue": "^2.2.2",
+        "axios": "^1.2.2",
         "tailwindcss": "^3.0.23",
         "vue": "^3.2.31",
         "vue-router": "^4.0.12"
