--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,17 @@
     "dependencies": {
         "@tailwindcss/forms": "^0.4.0",
         "@tailwindcss/typography": "^0.5.2",
+        "@types/marked": "^4.0.8",
         "@vitejs/plugin-vue": "^2.2.2",
         "axios": "^1.2.2",
+        "dompurify": "^2.4.3",
+        "marked": "^4.2.12",
         "tailwindcss": "^3.0.23",
         "vue": "^3.2.31",
         "vue-router": "^4.0.12"
     },
     "devDependencies": {
+        "@types/dompurify": "^2.4.0",
         "@typescript-eslint/eslint-plugin": "^5.12.1",
         "@typescript-eslint/parser": "^5.12.1",
         "@vue/compiler-sfc": "^3.2.31",
