single post view

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,8 +7,18 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "experimentalDecorators": true,
-        "lib": ["dom", "esnext"],
-        "types": ["vite/client"]
+        "lib": [
+            "dom",
+            "esnext"
+        ],
+        "types": [
+            "vite/client"
+        ],
+        "allowSyntheticDefaultImports": true,
     },
-    "exclude": ["node_modules", "dist", "public"]
+    "exclude": [
+        "node_modules",
+        "dist",
+        "public"
+    ]
 }
