--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
         "axios": "^1.2.2",
         "dompurify": "^2.4.3",
         "marked": "^4.2.12",
+        "postcss-import": "^15.1.0",
         "tailwindcss": "^3.0.23",
         "vue": "^3.2.31",
         "vue-router": "^4.0.12"
@@ -33,6 +34,7 @@
         "eslint-plugin-vue": "^8.5.0",
         "lint-staged": "^12.3.4",
         "postcss": "^8.4.6",
+        "postcss-nesting": "^10.2.0",
         "prettier": "^2.5.1",
         "typescript": "^4.5.5",
         "vite": "^2.8.4"
