--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   },
   "dependencies": {
     "concurrently": "^7.6.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2"
   }
 }
