--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,50 +1,56 @@
 {
-    "name": "vue3-ts-tailwind-starter",
-    "version": "0.0.0",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "start": "npm run dev",
-        "lint": "eslint . --ext .js,.ts,.vue",
-        "lint:fix": "eslint . --ext .js,.ts,.vue --fix",
-        "prettier": "prettier . --write"
-    },
-    "dependencies": {
-        "@jamescoyle/vue-icon": "^0.1.2",
-        "@mdi/font": "^7.1.96",
-        "@mdi/js": "^7.1.96",
-        "@mui/icons-material": "^5.11.0",
-        "@tailwindcss/forms": "^0.4.0",
-        "@tailwindcss/typography": "^0.5.2",
-        "@types/marked": "^4.0.8",
-        "@vitejs/plugin-vue": "^2.2.2",
-        "axios": "^1.2.2",
-        "dompurify": "^2.4.3",
-        "marked": "^4.2.12",
-        "postcss-import": "^15.1.0",
-        "tailwindcss": "^3.0.23",
-        "vue": "^3.2.31",
-        "vue-router": "^4.0.12"
-    },
-    "devDependencies": {
-        "@types/dompurify": "^2.4.0",
-        "@typescript-eslint/eslint-plugin": "^5.12.1",
-        "@typescript-eslint/parser": "^5.12.1",
-        "@vue/compiler-sfc": "^3.2.31",
-        "@vue/eslint-config-typescript": "^10.0.0",
-        "autoprefixer": "^10.4.2",
-        "babel-eslint": "^10.1.0",
-        "eslint": "^8.9.0",
-        "eslint-plugin-vue": "^8.5.0",
-        "lint-staged": "^12.3.4",
-        "postcss": "^8.4.6",
-        "postcss-nesting": "^10.2.0",
-        "prettier": "^2.5.1",
-        "typescript": "^4.5.5",
-        "vite": "^2.8.4"
-    },
-    "lint-staged": {
-        "*.{js,ts,vue}": "eslint --cache --fix",
-        "*.{js,css,md}": "prettier --write"
-    }
+  "name": "vue3-ts-tailwind-starter",
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "start": "npm run dev",
+    "lint": "eslint . --ext .js,.ts,.vue",
+    "lint:fix": "eslint . --ext .js,.ts,.vue --fix",
+    "prettier": "prettier . --write"
+  },
+  "dependencies": {
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/font": "^7.1.96",
+    "@mdi/js": "^7.1.96",
+    "@mui/icons-material": "^5.11.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.2",
+    "@types/marked": "^4.0.8",
+    "@vitejs/plugin-vue": "^2.2.2",
+    "axios": "^1.2.2",
+    "dompurify": "^2.4.3",
+    "marked": "^4.2.12",
+    "postcss-import": "^15.1.0",
+    "tailwindcss": "^3.0.23",
+    "vue": "^3.2.31",
+    "vue-router": "^4.0.12"
+  },
+  "devDependencies": {
+    "@types/dompurify": "^2.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "@vue/compiler-sfc": "^3.2.31",
+    "@vue/eslint-config-typescript": "^10.0.0",
+    "autoprefixer": "^10.4.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.9.0",
+    "eslint-plugin-vue": "^8.5.0",
+    "lint-staged": "^12.3.4",
+    "postcss": "^8.4.6",
+    "postcss-nesting": "^10.2.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.5",
+    "vite": "^2.8.4"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write"
+  },
+  "workspaces": {
+    "nohoist": [
+      "@tailwindcss/forms",
+      "@tailwindcss/forms/**"
+    ]
+  }
 }
