restructuring to domain architecure

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,11 +14,15 @@
         "types": [
             "vite/client"
         ],
-        "allowSyntheticDefaultImports": true,
+        "allowSyntheticDefaultImports": true
     },
     "exclude": [
         "node_modules",
         "dist",
         "public"
+    ],
+    "include": [
+        "./src/**/*.ts",
+        "./src/**/*.vue"
     ]
 }
