--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "helmet": "^6.0.1",
+        "mariadb": "^3.1.0",
         "mysql2": "^3.0.1",
         "sequelize": "^6.28.0"
     },
